5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1670_1391.log
== TEST (2019-04-16 18:20:16) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(energia,2))
	
	

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:20:30) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(valor,2))
	
	

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:20:39) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(valor,2))
	
	

-- EXECUTION TIME:
0.164375
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
142
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
250
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
501
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:20:40) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(valor,2))
	
	

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:21:05) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=0.75+16.00
	print(round(valor,2))
	
	

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:21:42) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=0.75+16.00
	print(round(valor,2))
	
	

-- ERROR:
File "XXXX", line 2
    if(150<=):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:23:20) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=valor):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(float(round(valor,2))
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:23:33) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=valor):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(float(round(valor,2))
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:23:47) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=valor):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(float(round(valor,2))
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:41) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=valor):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(float(round(valor,2))
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:42) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=valor):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(float(round(valor,2))
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:42) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=valor):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(float(round(valor,2))
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:42) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=valor):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(float(round(valor,2))
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:43) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=valor):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(float(round(valor,2))
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:43) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=valor):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(float(round(valor,2))
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:43) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=valor):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(float(round(valor,2))
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:57) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=valor):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(valor,2)
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:04) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(150<=valor):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	print(round(valor,2)
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:20) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	print(round(valor,2)
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:51) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(float(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(valor,2))
	
	

-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:00) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(valor,2))
	
	

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:27:39) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(valor,2))
	
	

-- EXECUTION TIME:
0.139103
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
142
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
250
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
501
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:01) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(valor,2))
	
	

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:15) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=150*0.75-16.00
	print(round(valor,2))
	
	

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:39:55) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(valor,2))
	
	

-- EXECUTION TIME:
0.138804
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
142
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
250
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
501
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:38) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=valor<=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(valor,2))
	
	

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:06) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor>=150):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(valor,2))
	
	

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:36) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=150*0.60+5.00
	print(round(valor,2))
else:
	consumo=150*0.75+16.00
	print(round(valor,2))
	
	

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:05) 
-- CODE:
valor=int(input("Digite o valor da conta:"))
if(valor<=150):
	consumo=0.60+5.00
	print(round(valor,2))
else:
	consumo=0.75+16.00
	print(round(valor,2))
	
	

-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
